# zkp_chaum_pedersen

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
proto/: zkp_auth.proto
src/: elliptic_curves.rs  finite_field.rs  lib.rs  secp256k1.rs
src/client/: main.rs
src/server/: main.rs
